# STG-Q

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  QC_Combine.cpp  QC_Quantify.sh  Quantify.sh  README.md  get-packages.sh  install.sh  run_tests.sh  set_env_vars
.github/workflows/: nightly_test_stgq.yml  test_stgq.yml
Test_Cases/: run_tests.sh
Test_Cases/add/: dict.json  stg_pc_0.stg  stg_pc_1.stg  stg_pc_2.stg
Test_Cases/array_test/: dict.json  stg_pc_0.stg
Test_Cases/array_with_sym_index/: dict.json  expected.txt  stg_pc_0.stg
Test_Cases/atan2/: dict.json  expected.txt  stg_pc_0.stg
Test_Cases/binomial_distrib/: dict.json  expected.txt  stg_pc_0.stg
Test_Cases/complex_if_test/: dict.json  stg_pc_0.stg
Test_Cases/exp_test/: llvm.exp_test.cpp
Test_Cases/exponential_distrib/: dict.json  expected.txt  stg_pc_0.stg
Test_Cases/geometric_distrib/: dict.json  expected.txt  stg_pc_0.stg
Test_Cases/if_intrinsic_distribution/: dict.json  exp2.stg
Test_Cases/if_nested_if_else_test/: dict.json  stg_pc_0.stg  stg_pc_1.stg  stg_pc_2.stg
Test_Cases/if_test/: dict.json  stg_pc_0.stg  stg_pc_1.stg  stg_pc_2.stg
Test_Cases/intrinsic/: test_intrinsic.stg
Test_Cases/log/stg-out/: dict.json  expected.txt  stg_pc_0.stg
Test_Cases/max_test/: dict.json  stg_pc_0.stg
Test_Cases/normal_distrib/: dict.json  expected.txt
Test_Cases/poisson_distrib/: dict.json  expected.txt
Test_Cases/pow_sqrt/stg-out/: dict.json  stg_pc_0.stg
Test_Cases/px4_acc/: stg_pc_0.stg  stg_pc_1.stg  stg_pc_2.stg  stg_pc_4.stg
Test_Cases/px4_baseline/: dict.json  stg_pc_0.stg  stg_pc_2.stg  stg_pc_4.stg  stg_pc_5.stg  stg_pc_6.stg
Test_Cases/px4_simple_12tests/: stg_pc_0.stg  stg_pc_10.stg  stg_pc_11.stg  stg_pc_2.stg  stg_pc_7.stg  stg_pc_9.stg
Test_Cases/px4_simple_4tests/: stg_pc_1.stg  stg_pc_2.stg  stg_pc_3.stg
Test_Cases/px4_simple_accel-only/: stg_pc_0.stg  stg_pc_1.stg  stg_pc_10.stg  stg_pc_11.stg  stg_pc_2.stg  stg_pc_3.stg  stg_pc_6.stg  stg_pc_8.stg  stg_pc_9.stg
Test_Cases/px4_simple_function_test/: expected.txt  stg_pc_12.stg  stg_pc_15.stg  stg_pc_17.stg  stg_pc_18.stg  stg_pc_19.stg  stg_pc_20.stg  stg_pc_21.stg  stg_pc_22.stg  stg_pc_23.stg  stg_pc_3.stg  stg_pc_4.stg  stg_pc_5.stg  stg_pc_6.stg  stg_pc_7.stg  stg_pc_8.stg
Test_Cases/simple_airspeed_calibration/: dict.json  expected.txt  stg_pc_0.stg  stg_pc_1.stg
Test_Cases/t/: dict.json  expected.txt  stg_pc_2.stg
Test_Cases/trig/: dict.json  stg_pc_1.stg
Test_Cases/trig/stg-out-14/: stg_pc_0.stg
bin2/: Quantify.sh  comb  res  stg2qc  stgdiff.sh
cmake/: ExternalAntlr4Cpp.cmake
docs/: Doxyfile
include/: Constraint.h  ConstraintPrinter.h  ConstraintVisitor.h
scripts/: cleancov.sh  distclean.sh  gencov.sh  get-packages.sh  install_all.sh  install_stgq.sh  register-clang-version.sh  run_unit_tests.sh
scripts/docker/: stgq_entrypoint.sh
scripts/pysmt/__MACOSX/pysmt/: ._test_fxp_real.py
src/: CMakeLists.txt
src/driver/: ConstraintDriver.cpp
src/lib/: CMakeLists.txt  Constraint.cpp  ConstraintBuilder.cpp  ConstraintBuilder.h  ConstraintGrammar.g4  ConstraintPrinter.cpp
src/tools/: CMakeLists.txt  ConstraintFolder.cpp  ConstraintFolder.h  ConstraintTypeChecker.cpp  ConstraintTypeChecker.h  stgpp.cpp  stgred.sh
test/lib/: README.md  run.sh
test/lib/inputs/fail/: typeerror2.stg  typeerror4.stg
test/lib/inputs/pass/: bigbang.stg  t2.stg  t4.stg  t5.stg
test/lib/parsetype-inputs/fail/: parseerror.stg  typeerror1.stg
test/lib/parsetype-inputs/pass/: bigbang.stg  t1.stg  t2.stg  t3.stg  t4.stg
test/tools/: README.md  run.sh
test/tools/duplicated-inputs/: three2two.out
test/tools/duplicated-inputs/three2two/: t1a.stg  t1b.stg  t1c.stg
test/tools/fold-inputs/: fneg.stg  fptosiandback.stg  fptruncext.stg  intarith.stg  lnot.stg  trunc.stg  trunczext.stg
test/tools/inputs/: t1a.stg  t1b.stg
test/unit/: CMakeLists.txt
test/unit/fxp/: CMakeLists.txt  dict.json  fxpTest.cpp
test/unit/qc/: CMakeLists.txt  dict.json  qcoralTest.cpp
test/unit/smt/: CMakeLists.txt  smtTest.cpp
